# crewai_openai

./: .env.template  README.md  pyproject.toml  report.md  reporting_task.md
src/crewai_openai/: crew.py  main.py
src/crewai_openai/config/: tasks.yaml
tests/: testcrewai.py
