[project]
name = "crewai_openai"
version = "0.1.0"
description = "crewai-openai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
crewai_openai = "crewai_openai.main:run"
run_crew = "crewai_openai.main:run"
train = "crewai_openai.main:train"
replay = "crewai_openai.main:replay"
test = "crewai_openai.main:test"
run_with_trigger = "crewai_openai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
